Added concatenation fo designation and description as text

--- a/donnees.ipynb
+++ b/donnees.ipynb
@@ -42,6 +42,10 @@
     "xtrain['designation'] = xtrain['designation'].astype('string')\n",
     "xtrain['description'] = xtrain['description'].astype('string')\n",
     "\n",
+    "xtrain['text']=\"\"\n",
+    "for i in range(xtrain.shape[0]):\n",
+    "    xtrain['text'][i] = create_text(xtrain['designation'][i], xtrain['description'][i])\n",
+    "\n",
     "xtrain['text'] = xtrain['text'].apply(lambda text : lower_case(text))  # Conversion en minuscules\n",
     "xtrain['text'] = xtrain['text'].apply(lambda text : remove_accent(text)) # Suppression des accents\n",
     "xtrain['text'] = xtrain['text'].apply(lambda x: ' '.join([word for word in x.split() if word not in stopwords]))  # Suppression des stopwords\n",
