added create_text in list of imports

--- a/donnees.ipynb
+++ b/donnees.ipynb
@@ -32,7 +32,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from preprocess_function import lower_case, remove_accent, remove_htmltags, keeping_essentiel\n",
+    "from preprocess_function import lower_case, remove_accent, remove_htmltags, keeping_essentiel, create_text\n",
     "df_xtrain = pd.read_csv('X_train_update.csv', index_col=0)\n",
     "df_ytrain = pd.read_csv('Y_train_CVw08PX.csv',index_col=0)\n",
     "df_xtest = pd.read_csv('X_test_update.csv',index_col=0)\n",
