--- a/donnees.ipynb
+++ b/donnees.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -66,12 +66,234 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Les données sont plus 'propres' maintenant\n",
+    "\n",
+    "# Labelisation\n",
+    "On va réorganiser les labels pour avoir des valeurs entre 0 et 26 au lieu de valeurs arbitraires 10, 2403, etc..."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "xtrain.to_csv('xtrain.csv') #sauvegarde du fichier"
+    "# Combiner les dictionnaires\n",
+    "prdtypecode_mapping = {10: 0, 40: 1, 50: 2, 60: 3, 1140: 4, 1160: 5, 1180: 6, 1280: 7, 1281: 8, 1300: 9, \n",
+    "                       1301: 10, 1302: 11, 1320: 12, 1560: 13, 1920: 14, 1940: 15, 2060: 16, 2220: 17, \n",
+    "                       2280: 18, 2403: 19, 2462: 20, 2522: 21, 2582: 22, 2583: 23, 2585: 24, 2705: 25, \n",
+    "                       2905: 26}\n",
+    "\n",
+    "# Appliquer la méthode remplacer\n",
+    "xtrain.replace({'prdtypecode': prdtypecode_mapping}, inplace=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>designation</th>\n",
+       "      <th>description</th>\n",
+       "      <th>productid</th>\n",
+       "      <th>imageid</th>\n",
+       "      <th>prdtypecode</th>\n",
+       "      <th>text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Olivia: Personalisiertes Notizbuch / 150 Seite...</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>3804725264</td>\n",
+       "      <td>1263597046</td>\n",
+       "      <td>0</td>\n",
+       "      <td>olivia personalisiertes notizbuch seiten punkt...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Journal Des Arts (Le) N° 133 Du 28/09/2001 - L...</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>436067568</td>\n",
+       "      <td>1008141237</td>\n",
+       "      <td>18</td>\n",
+       "      <td>journal arts le n l art son marche salon d art...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Grand Stylet Ergonomique Bleu Gamepad Nintendo...</td>\n",
+       "      <td>PILOT STYLE Touch Pen de marque Speedlink est ...</td>\n",
+       "      <td>201115110</td>\n",
+       "      <td>938777978</td>\n",
+       "      <td>2</td>\n",
+       "      <td>grand stylet ergonomique bleu gamepad nintendo...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Peluche Donald - Europe - Disneyland 2000 (Mar...</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>50418756</td>\n",
+       "      <td>457047496</td>\n",
+       "      <td>7</td>\n",
+       "      <td>peluche donald europe disneyland marionnette d...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>La Guerre Des Tuques</td>\n",
+       "      <td>Luc a des id&amp;eacute;es de grandeur. Il veut or...</td>\n",
+       "      <td>278535884</td>\n",
+       "      <td>1077757786</td>\n",
+       "      <td>25</td>\n",
+       "      <td>guerre tuquesluc id eacute es grandeur veut or...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>84911</th>\n",
+       "      <td>The Sims [ Import Anglais ]</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>206719094</td>\n",
+       "      <td>941495734</td>\n",
+       "      <td>1</td>\n",
+       "      <td>the sims import anglais</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>84912</th>\n",
+       "      <td>Kit piscine acier NEVADA déco pierre Ø 3.50m x...</td>\n",
+       "      <td>&lt;b&gt;Description complète :&lt;/b&gt;&lt;br /&gt;Kit piscine...</td>\n",
+       "      <td>3065095706</td>\n",
+       "      <td>1188462883</td>\n",
+       "      <td>23</td>\n",
+       "      <td>kit piscine acier nevada deco pierre m x mdesc...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>84913</th>\n",
+       "      <td>Journal Officiel De La Republique Francaise N°...</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>440707564</td>\n",
+       "      <td>1009325617</td>\n",
+       "      <td>18</td>\n",
+       "      <td>journal officiel republique francaise n change...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>84914</th>\n",
+       "      <td>Table Basse Bois De Récupération Massif Base B...</td>\n",
+       "      <td>&lt;p&gt;Cette table basse a un design unique et con...</td>\n",
+       "      <td>3942400296</td>\n",
+       "      <td>1267353403</td>\n",
+       "      <td>13</td>\n",
+       "      <td>table basse bois recuperation massif base blan...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>84915</th>\n",
+       "      <td>Gomme De Collection 2 Gommes Pinguin Glace Ver...</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>57203227</td>\n",
+       "      <td>684671297</td>\n",
+       "      <td>21</td>\n",
+       "      <td>gomme collection gommes pinguin glace vert orange</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>84916 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                             designation  \\\n",
+       "0      Olivia: Personalisiertes Notizbuch / 150 Seite...   \n",
+       "1      Journal Des Arts (Le) N° 133 Du 28/09/2001 - L...   \n",
+       "2      Grand Stylet Ergonomique Bleu Gamepad Nintendo...   \n",
+       "3      Peluche Donald - Europe - Disneyland 2000 (Mar...   \n",
+       "4                                   La Guerre Des Tuques   \n",
+       "...                                                  ...   \n",
+       "84911                        The Sims [ Import Anglais ]   \n",
+       "84912  Kit piscine acier NEVADA déco pierre Ø 3.50m x...   \n",
+       "84913  Journal Officiel De La Republique Francaise N°...   \n",
+       "84914  Table Basse Bois De Récupération Massif Base B...   \n",
+       "84915  Gomme De Collection 2 Gommes Pinguin Glace Ver...   \n",
+       "\n",
+       "                                             description   productid  \\\n",
+       "0                                                   <NA>  3804725264   \n",
+       "1                                                   <NA>   436067568   \n",
+       "2      PILOT STYLE Touch Pen de marque Speedlink est ...   201115110   \n",
+       "3                                                   <NA>    50418756   \n",
+       "4      Luc a des id&eacute;es de grandeur. Il veut or...   278535884   \n",
+       "...                                                  ...         ...   \n",
+       "84911                                               <NA>   206719094   \n",
+       "84912  <b>Description complète :</b><br />Kit piscine...  3065095706   \n",
+       "84913                                               <NA>   440707564   \n",
+       "84914  <p>Cette table basse a un design unique et con...  3942400296   \n",
+       "84915                                               <NA>    57203227   \n",
+       "\n",
+       "          imageid  prdtypecode  \\\n",
+       "0      1263597046            0   \n",
+       "1      1008141237           18   \n",
+       "2       938777978            2   \n",
+       "3       457047496            7   \n",
+       "4      1077757786           25   \n",
+       "...           ...          ...   \n",
+       "84911   941495734            1   \n",
+       "84912  1188462883           23   \n",
+       "84913  1009325617           18   \n",
+       "84914  1267353403           13   \n",
+       "84915   684671297           21   \n",
+       "\n",
+       "                                                    text  \n",
+       "0      olivia personalisiertes notizbuch seiten punkt...  \n",
+       "1      journal arts le n l art son marche salon d art...  \n",
+       "2      grand stylet ergonomique bleu gamepad nintendo...  \n",
+       "3      peluche donald europe disneyland marionnette d...  \n",
+       "4      guerre tuquesluc id eacute es grandeur veut or...  \n",
+       "...                                                  ...  \n",
+       "84911                           the sims import anglais   \n",
+       "84912  kit piscine acier nevada deco pierre m x mdesc...  \n",
+       "84913  journal officiel republique francaise n change...  \n",
+       "84914  table basse bois recuperation massif base blan...  \n",
+       "84915  gomme collection gommes pinguin glace vert orange  \n",
+       "\n",
+       "[84916 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xtrain.to_csv('xtrain.csv') #sauvegarde du fichier\n",
+    "xtrain"
    ]
   }
  ],
