--- a/Contruction_TF-IDF.ipynb
+++ b/Contruction_TF-IDF.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -105,16 +105,41 @@
        "[84916 rows x 1 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "Xtrain = pd.read_csv('xtrain.csv', index_col=0)\n",
-    "Xtrain\n",
-    "ytrain = pd.read_csv('ytrain.csv', index_col=0)\n",
+    "Xtrain = Xtrain['text']\n",
+    "ytrain = pd.read_csv('Y_train_CVw08PX.csv', index_col=0)\n",
     "ytrain"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of the TF-IDF Xtrain Matrix:\n",
+      "(84916, 160403)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "\n",
+    "tfidf = TfidfVectorizer()\n",
+    "\n",
+    "Xtrain_matrix = tfidf.fit_transform(Xtrain)\n",
+    "\n",
+    "print(\"Shape of the TF-IDF Xtrain Matrix:\")\n",
+    "print(Xtrain_matrix.shape)"
    ]
   }
  ],
