--- a/Contruction_TF-IDF.ipynb
+++ b/Contruction_TF-IDF.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
        "[84916 rows x 1 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,13 +113,15 @@
    "source": [
     "Xtrain = pd.read_csv('xtrain.csv', index_col=0)\n",
     "Xtrain = Xtrain['text']\n",
+    "Xtest = pd.read_csv('xtest.csv', index_col=0)\n",
+    "Xtest = Xtest['text']\n",
     "ytrain = pd.read_csv('Y_train_CVw08PX.csv', index_col=0)\n",
     "ytrain"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +129,9 @@
      "output_type": "stream",
      "text": [
       "Shape of the TF-IDF Xtrain Matrix:\n",
-      "(84916, 160403)\n"
+      "(84916, 160403)\n",
+      "Shape of the TF-IDF Xtest Matrix:\n",
+      "(13812, 57458)\n"
      ]
     }
    ],
@@ -137,10 +141,20 @@
     "tfidf = TfidfVectorizer()\n",
     "\n",
     "Xtrain_matrix = tfidf.fit_transform(Xtrain)\n",
+    "Xtest_matrix = tfidf.fit_transform(Xtest)\n",
     "\n",
     "print(\"Shape of the TF-IDF Xtrain Matrix:\")\n",
-    "print(Xtrain_matrix.shape)"
+    "print(Xtrain_matrix.shape)\n",
+    "print(\"Shape of the TF-IDF Xtest Matrix:\")\n",
+    "print(Xtest_matrix.shape)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
