feat: Added export TF-IDF Matrix as .npz files

--- a/Contruction_TF-IDF.ipynb
+++ b/Contruction_TF-IDF.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
        "[84916 rows x 1 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -150,11 +150,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Export TF-IDF files"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "from scipy import sparse\n",
+    "\n",
+    "sparse.save_npz('Xtrain_matrix.npz', Xtrain_matrix)\n",
+    "sparse.save_npz('Xtest_matrix.npz', Xtest_matrix)"
+   ]
   }
  ],
  "metadata": {
