Starting LogReg, issue with ytrain and labels, revert back to commit 1e7b7b1

--- a/LogisticReg.ipynb
+++ b/LogisticReg.ipynb
@@ -2,25 +2,72 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import re\n",
     "import spacy\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from scipy import sparse"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Xtrain=pd.read_csv('xtrain.csv')\n",
-    "Y=pd.read_csv('Y_train_CVw08PX.csv')\n",
-    "Xtest=pd.read_csv('xtest.csv')"
+    "X = sparse.load_npz('Xtrain_matrix.npz')\n",
+    "y = pd.read_csv('Y_train_CVw08PX.csv')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Découpage des données\n",
+    "On n'a pas de y_test avec le x_test fournit, on découpe alors notre x_train pour obtenir un échantillon de validation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Modèle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn import linear_model\n",
+    "\n",
+    "clf = linear_model.SGDClassifier(max_iter=1000, tol=1e-3)\n",
+    "clf.fit(X_train, y_train['label'])\n",
+    "\n",
+    "y_pred = clf.predict(X_test)\n",
+    "\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "accuracy_score(y_test['label'], y_pred)\n",
+    "\n",
+    "X_test = sparse.load_npz('Xtest_matrix.npz')\n",
+    "y_pred = clf.predict(X_test)\n",
+    "\n",
+    "y_pred = pd.DataFrame(y_pred, columns=['label'])"
    ]
   }
  ],
