--- a/donnees.ipynb
+++ b/donnees.ipynb
@@ -34,12 +34,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\herra\\AppData\\Local\\Temp\\ipykernel_33604\\1852649980.py:18: SettingWithCopyWarning: \n",
+      "C:\\Users\\herra\\AppData\\Local\\Temp\\ipykernel_30096\\3182249980.py:19: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  xtrain['text'][i] = create_text(xtrain['designation'][i], xtrain['description'][i])\n",
-      "C:\\Users\\herra\\AppData\\Local\\Temp\\ipykernel_33604\\1852649980.py:20: SettingWithCopyWarning: \n",
+      "C:\\Users\\herra\\AppData\\Local\\Temp\\ipykernel_30096\\3182249980.py:21: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -56,6 +56,7 @@
     "\n",
     "xtrain = df_xtrain\n",
     "xtest= df_xtest\n",
+    "ytrain= df_ytrain\n",
     "\n",
     "xtrain['designation'] = xtrain['designation'].astype('string')\n",
     "xtrain['description'] = xtrain['description'].astype('string')\n",
@@ -107,7 +108,6 @@
     }
    ],
    "source": [
-    "xtest= df_xtest\n",
     "print(xtest.shape[0])\n",
     "xtest['text'][84916]"
    ]
@@ -135,7 +135,9 @@
     "                       2905: 26}\n",
     "\n",
     "# Appliquer la méthode remplacer\n",
-    "xtrain.replace({'prdtypecode': prdtypecode_mapping}, inplace=True)"
+    "xtrain.replace({'prdtypecode': prdtypecode_mapping}, inplace=True)\n",
+    "xtest.replace({'prdtypecode': prdtypecode_mapping}, inplace=True)\n",
+    "ytrain.replace({'prdtypecode': prdtypecode_mapping}, inplace=True)"
    ]
   },
   {
@@ -145,7 +147,8 @@
    "outputs": [],
    "source": [
     "xtrain.to_csv('xtrain.csv') #sauvegarde du fichier\n",
-    "xtest.to_csv('xtest.csv') #sauvegarde du fichier"
+    "xtest.to_csv('xtest.csv') #sauvegarde du fichier\n",
+    "ytrain.to_csv('ytrain.csv') #sauvegarde du fichier"
    ]
   }
  ],
