--- a/donnees.ipynb
+++ b/donnees.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,19 +27,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\herra\\AppData\\Local\\Temp\\ipykernel_30096\\3182249980.py:19: SettingWithCopyWarning: \n",
+      "C:\\Users\\herra\\AppData\\Local\\Temp\\ipykernel_30096\\669363419.py:19: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  xtrain['text'][i] = create_text(xtrain['designation'][i], xtrain['description'][i])\n",
-      "C:\\Users\\herra\\AppData\\Local\\Temp\\ipykernel_30096\\3182249980.py:21: SettingWithCopyWarning: \n",
+      "C:\\Users\\herra\\AppData\\Local\\Temp\\ipykernel_30096\\669363419.py:21: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -54,7 +54,7 @@
     "df_ytrain = pd.read_csv('Y_train_CVw08PX.csv',index_col=0)\n",
     "df_xtest = pd.read_csv('X_test_update.csv',index_col=0)\n",
     "\n",
-    "xtrain = df_xtrain\n",
+    "xtrain = pd.concat([df_xtrain, df_ytrain['prdtypecode'] ], axis = 1)\n",
     "xtest= df_xtest\n",
     "ytrain= df_ytrain\n",
     "\n",
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
        "'folkmanis puppets marionnette theatre mini turtle'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
