fixed content and added lines

--- a/SVM.ipynb
+++ b/SVM.ipynb
@@ -16,8 +16,6 @@
     "from sklearn import svm\n",
     "from sklearn import model_selection\n",
     "import pandas as pd\n",
-    "import re\n",
-    "import spacy\n",
     "import numpy as np\n",
     "from scipy import sparse\n",
     "from sklearn.metrics import classification_report\n",
@@ -48,7 +46,8 @@
    "source": [
     "y_pred = clf_svm.predict(X_test)\n",
     "# Calcul et affichage de classification_report\n",
-    "print( classification_report(y_test, y_pred) )"
+    "print( classification_report(y_test['prdtypecode'], y_pred) )\n",
+    "clf_svm.score(X_test, y_test['prdtypecode'])"
    ]
   }
  ],
