Fixed features error, now working with X_test_final for main branch

--- a/Contruction_TF-IDF.ipynb
+++ b/Contruction_TF-IDF.ipynb
@@ -131,7 +131,7 @@
       "Shape of the TF-IDF Xtrain Matrix:\n",
       "(84916, 160403)\n",
       "Shape of the TF-IDF Xtest Matrix:\n",
-      "(13812, 57458)\n"
+      "(13812, 160403)\n"
      ]
     }
    ],
@@ -141,7 +141,7 @@
     "tfidf = TfidfVectorizer()\n",
     "\n",
     "Xtrain_matrix = tfidf.fit_transform(Xtrain)\n",
-    "Xtest_matrix = tfidf.fit_transform(Xtest)\n",
+    "Xtest_matrix = tfidf.transform(Xtest)\n",
     "\n",
     "print(\"Shape of the TF-IDF Xtrain Matrix:\")\n",
     "print(Xtrain_matrix.shape)\n",
