feat: Apply classification

--- a/clustering_appoaches/k-means_clustering.ipynb
+++ b/clustering_appoaches/k-means_clustering.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,6 +71,31 @@
     "    if tight_layout:\n",
     "        plt.tight_layout()\n",
     "    plt.savefig(path, format=fig_extension, dpi=resolution)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Initialisation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn import svm\n",
+    "from sklearn import model_selection\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from scipy import sparse\n",
+    "from sklearn.metrics import classification_report\n",
+    "\n",
+    "\n",
+    "X = sparse.load_npz('Xtest_matrix.npz')\n",
+    "y = pd.read_csv('ytrain.csv')\n"
    ]
   }
  ],
